new logo but needs to be larger

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,8 +8,8 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.jpg",
-      "type": "image/jpeg",
+      "src": "COSMVERSE LOGO 1.svg",
+      "type": "image/svg",
       "sizes": "192x192"
     },
     {
