--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "120x120 64x64 48x48 32x32",
       "type": "image/x-icon"
     },
     {
-      "src": "COSMVERSE LOGO 1.svg",
-      "type": "image/svg",
+      "src": "logo192.jpg",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
