--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^4.0.0",
@@ -27,6 +29,8 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-icons": "^3.0.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^3.9.5",
@@ -54,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0"
   }
 }
