--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^4.0.0",
     "node-sass": "4.14.1",
@@ -26,9 +28,13 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-icons": "^3.0.0",
+    "react-outside-click-handler": "^1.3.0",
+    "react-range": "^1.8.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "typescript": "^3.9.5",
+    "use-dark-mode": "^2.3.1",
     "web-vitals": "^0.2.2"
   },
   "scripts": {
