--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
+    "node-sass": "^5.0.0",
     "framer-motion": "^4.0.0",
-    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
